--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Information Technology AI/ML  
+  uni: Udemy
+  year: June, 2021 &mdash; June, 2022
   # awards:
-  # summary:
+  summary: This is a nanodegree for aspirants looking forward to learn AI/ML
